apps/base/unifi-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi-controller
  namespace: unifi-controller
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: UniFi Controller
    gethomepage.dev/description: Network controller
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: unifi.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - unifi-controller.cluster.f4mily.net
      secretName: wildcard-cluster-f4mily-net-tls
  rules:
    - host: unifi-controller.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-controller
                port:
                  number: 8443
